# QUANTUM-WORKSPACE

./: .eslintrc.json  CHANGELOG.md  COMPETITION.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  package-lock.json  package.json  push-to-github.sh  push.sh  tsconfig.json  utils.sh
.github/workflows/: build.yml  release.yml
docs/: commands.md  configuration.md  getting-started.md  index.md  templates.md
src/: ai-terminal.ts  auto-workflow.ts  context-indexer.ts  extension.ts  one-click-build.ts  one-click-deploy.ts  plugin-system.ts  project-templates.ts  quantum-brain.ts  response-cache.ts  simple-mode.ts  smart-memory.ts  visual-git.ts
src/llm/: router.ts
tauri/: README.md  tauri.conf.json
tauri/src-tauri/: Cargo.toml
tauri/src-tauri/src/: main.rs
themes/: quantum-dark.json  quantum-light.json
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
