[package]
name = "quantum-workspace"
version = "1.0.0"
description = "Quantum Workspace - AI-Powered IDE"
authors = ["Quantum Technologies"]
license = "PROPRIETARY"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"